--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -17,3 +17,6 @@
     font-size: 24px;
     border-bottom: 2px solid black;
 }
+.container .calculate-container .container-items .calculate-content {
+    background-color: #E7F6F2;
+}
