--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 footer {
     height: 6vh;
-    font-size: 1.5vh;
+    font-size: 14px;
     display: flex;
     align-items: center;
     justify-content: center;
