--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -12,6 +12,6 @@
     padding-right: 5px;
 }
 .navbar .navbar-items .navbar-header {
-    font-size: 2vh;
+    font-size: 16px;
     font-weight: 400;
 }
