--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -12,9 +12,9 @@
     height: 97%;
     width: 97%; */
     /* margin: 15px; */
-    height: 100%;
+    /* height: 95%; */
     width: 100%;
-    box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px;
+    /* box-shadow: rgba(0, 0, 0, 0.1) 0px 4px 12px; */
     border-radius: 10px;
     padding-top: 5%;
 }
