--- a/src/components/Container/Form/Form.css
+++ b/src/components/Container/Form/Form.css
@@ -2,8 +2,9 @@ form {
     display: grid;
     flex-direction: column;
     align-items: center;
-    justify-content: space-between;
+    /* justify-content: space-between; */
 }
+
 form .form-items {
     display: flex;
     flex-direction: column;
@@ -11,19 +12,23 @@ form .form-items {
     align-items: center;
     width: 100%;
 }
+
 form .form-items .label {
     width: 100%;
     margin-bottom: 5px;
 }
+
 form .form-items .input {
     width: 100%;
 }
+
 form label {
     font-size: 14px;
     color: rgb(70, 70, 70);
 }
+
 input {
-    width:  calc(100% - 15px);
+    width: calc(100% - 15px);
     padding: 12px;
     font-size: 16px;
     color: rgba(0, 0, 0, 0.747);
