--- a/src/components/Container/Container.css
+++ b/src/components/Container/Container.css
@@ -5,6 +5,7 @@
     background-color: #d8d8d8;
     /* position: relative; */
 }
+
 .container .calculate-container {
     /* position: absolute;
     left: 1.5%;
@@ -18,19 +19,22 @@
     border-radius: 10px;
     padding-top: 5%;
 }
+
 .container .calculate-container .container-items {
     width: 550px;
     height: fit-content;
     margin: auto;
 }
+
 .container .calculate-container .container-items .calculate-header {
-    background-color: #b2c7d86e;
+    background-color: #8edbdb;
     padding: 15px;
     font-size: 20px;
     border-bottom: 2px solid black;
     border-top-right-radius: 10px;
     border-top-left-radius: 10px;
 }
+
 .container .calculate-container .container-items .calculate-content {
     /* height: 100%; */
     padding: 15px;
@@ -39,6 +43,7 @@
     border-bottom-right-radius: 10px;
     border-bottom-left-radius: 10px;
 }
+
 /* .container .calculate-container .container-items .calculate-content form {
     height: 100%;
 } */
