--- a/src/components/Container/Form/Form.css
+++ b/src/components/Container/Form/Form.css
@@ -28,6 +28,7 @@ form .form-items {
 
 form .form-items .label {
     width: 100%;
+    margin-top: 10px;
     margin-bottom: 5px;
 }
 
@@ -48,6 +49,31 @@ form label {
 input {
     width: 100%;
     padding: 12px;
+    font-size: 14px;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.747);
+    border: 0px solid rgba(143, 145, 156, 0.774);
+    border-radius: 2px;
+    user-select: none;
+}
+
+select {
+    width: 100%;
+    padding: 12px;
+    font-size: 14px;
+    font-weight: 600;
+    color: rgba(0, 0, 0, 0.747);
+    border: 0px solid rgba(143, 145, 156, 0.774);
+    border-radius: 2px;
+    user-select: none;
+}
+
+select:focus {
+    outline: none;
+}
+
+option {
+    width: 100%;
     font-size: 14px;
     font-weight: 600;
     color: rgba(0, 0, 0, 0.747);
