--- a/src/components/Container/PopUp/PopUp.css
+++ b/src/components/Container/PopUp/PopUp.css
@@ -23,3 +23,8 @@
     color: rgba(0, 0, 0, 0.664);
     margin-bottom: 15px;
 }
+
+.popUp .popUpContainer .popUpContainer {
+    display: flex;
+    justify-content: center;
+}
