--- a/src/components/Container/PopUp/PopUp.css
+++ b/src/components/Container/PopUp/PopUp.css
@@ -25,8 +25,9 @@
 }
 
 .popUp .popUpContainer .popUpTable table {
+    margin-top: 15px;
     border-collapse: collapse;
-    width: 100%;
+    min-width: 100%;
 }
 
 .popUp .popUpContainer .popUpTable table tr:nth-child(even) {
@@ -37,5 +38,5 @@
 th {
     border: 1px solid #dddddd;
     text-align: left;
-    padding: 8px;
+    padding: 12px;
 }
