--- a/src/components/Container/PopUp/PopUp.css
+++ b/src/components/Container/PopUp/PopUp.css
@@ -39,4 +39,16 @@ th {
     border: 1px solid #dddddd;
     text-align: left;
     padding: 12px;
+    text-align: center;
+    font-size: 14px;
 }
+
+/* .popUp .popUpContainer .popUpTable table th {
+    text-align: center;
+    font-size: 14px;
+}
+
+.popUp .popUpContainer .popUpTable table td {
+    text-align: center;
+    font-size: 14px;
+} */
