--- a/src/components/Container/PopUp/PopUp.css
+++ b/src/components/Container/PopUp/PopUp.css
@@ -32,7 +32,7 @@
 }
 
 .popUp .popUpContainer .popUpTable table tr:nth-child(even) {
-    background-color: #eeeeee;
+    background-color: #f77c3417;
 }
 
 .popUp .popUpContainer .popUpTable table td,
