--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,6 @@
 * {
   /* font-family: 'Epilogue', sans-serif; */
-  transition: all 0.5s ease;
+  /* transition: all 0.5s ease; */
   box-sizing: border-box;
 }
 
